changing new q7 version and adding license file for runner